--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 Created using JS Bin
 http://jsbin.com
 
-Copyright (c) 2018 by chirovan5231 (http://jsbin.com/ferosan/1/edit)
+Copyright (c) 2018 by vrei-garsoniera (http://jsbin.com/ferosan/1/edit)
 
 Released under the MIT license: http://jsbin.mit-license.org
 -->
@@ -439,7 +439,7 @@ p1{
   <h2>  NEWS  </h2> 
  
 <marquee bgcolor="GoldenRod ">Nu sunt garsoniere disponibile pentru inchiriat-momentan. Va rugam reveniti pe sit  caci, ocazional, pot apare modificari!Multumim!</marquee> 
-<h2> Incepand cu luna iulie 2018 va fi <stron> DISPONIBILA </strong> o garsoniera pentru inchiriere </p>
+<h2> Incepand cu luna IUNIE 2018 va fi <stron> DISPONIBILA </strong> o garsoniera pentru inchiriere </p>
  </div>
 <div id="dateContact" class="right orange">
   <h2>  Vremea la Braila   </h2> 
