--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@ p1{
   
 <h2>  NEWS  </h2> 
  
-<marquee bgcolor="GoldenRod ">Momentan avem doar o garsoniera  disponibila pentru inchiriere-tarif  920lei/luna. Ocazional, pot apare si alte  disponibilitati pentru inchiriere! Multumesc! tel: 0735018250</marquee> 
+<marquee bgcolor="GoldenRod ">Momentan avem doar ...... disponibila pentru inchiriere-tarif  ......lei/luna. Ocazional, pot apare si alte  disponibilitati pentru inchiriere! Multumesc! tel: 0735018250</marquee> 
 <h2> Incepand cu luna .........2018 este <stron> DISPONIBILA </strong> o garsoniera pentru inchiriere. </p>
 <h2>Garsonierele sunt proprietate personala - persoana fizica </h2>
  </div>
