--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ p1{
 		<p> Atunci cand numarul de telefon se  afiseaza   o garsoniera este disponibila pentru inchiriere.  </p>
 <p> Observati  caseta NEWS </p> 
                 <p>mail: florin5231@gmail.com</p>
-<p>0735018250</p>
+<p>xxxxxxxx250</p>
 		<a href="https://vrei-garsoniera.github.io/DISPONIBILA/" class="button">HOME</a>
 		<a href="https://vrei-garsoniera.github.io/ManualeDisponibila/" class="button">MANUALE</a>
                 <p> Accesul la  manuale   se poate face doar cu parola de pe Desktop sau Laptop.</p>
