--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ p1{
 <h2>  NEWS  </h2> 
  
 <marquee bgcolor="GoldenRod ">Momentan avem doar o garsoniera  disponibila pentru inchiriere-tarif 950lei/luna. Ocazional, pot apare si alte  disponibilitati pentru inchiriere! Multumesc! tel: 0735018250</marquee> 
-<h2> Incepand cu luna Noiembrie 2018 este <strong> DISPONIBILA </strong> o garsoniera pentru inchiriere. </p>
+<h2> Incepand cu luna FEBRUARIE  2019 este <strong> DISPONIBILA </strong> o garsoniera pentru inchiriere. </p>
 <h2>Garsonierele sunt proprietate personala - persoana fizica </h2>
  </div>
 
