--- a/index.html
+++ b/index.html
@@ -424,8 +424,8 @@ p1{
 <div id="dateContact" class="right orange">
   <h2>  NEWS  </h2> 
  
-<marquee bgcolor="GoldenRod ">Nu sunt garsoniere disponibile pentru inchiriat-momentan. Va rugam reveniti pe sit  caci, ocazional, pot apare modificari!Multumim!</marquee> 
-<h2> Incepand cu luna iulie 2018 va fi <stron> DISPONIBILA </strong> o garsoniera pentru inchiriere </p>
+<marquee bgcolor="GoldenRod ">Sunt garsoniere disponibile pentru inchiriat-momentan!Multumim!</marquee> 
+<h2> Incepand cu luna FEBRUARIE 2019 va fi <stron> DISPONIBILA </strong> o garsoniera pentru inchiriere </p>
  </div>
 <div id="dateContact" class="right orange">
   <h2>  Vremea la Braila   </h2> 
