--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@ p1{
  <h1> CONTACT <h1>
 <p>  Pot fi contactat  la adresa de mail  : florin5231@gmail.com 
 </p>
-<h2> TELEFON:0735018250</h2>
+<h2> TELEFON:07TTTTTTTTT</h2>
 <p> Telefonul este valabil doar atunci cand  avem o garsoniera disponibila pentru vizionare si inchiriere. </p>
 <p>Daca nu pot raspunde la telefon  va rog un sms si voi revenii cu un apel catre dumneavoastra intr-un timp cat mai scurt. </p>   
      </div>
@@ -441,8 +441,8 @@ p1{
   
 <h2>  NEWS  </h2> 
  
-<marquee bgcolor="GoldenRod ">Momentan avem doar o garsoniera  disponibila pentru inchiriere-tarif 950lei/luna. Ocazional, pot apare si alte  disponibilitati pentru inchiriere! Multumesc! tel: 0735018250</marquee> 
-<h2> Incepand cu luna FEBRUARIE  2019 este <strong> DISPONIBILA </strong> o garsoniera pentru inchiriere. </p>
+<marquee bgcolor="GoldenRod ">Momentan NU avem garsonierw  disponibile pentru inchiriere-tarif ....,00lei/luna. Ocazional, pot apare si alte  disponibilitati pentru inchiriere! Multumesc! tel: 070xxxxxxxxx</marquee> 
+<h2> Incepand cu luna ________  2019 este <strong> DISPONIBILA </strong> o garsoniera pentru inchiriere. </p>
 <h2>Garsonierele sunt proprietate personala - persoana fizica </h2>
  </div>
 
