--- a/index.html
+++ b/index.html
@@ -441,8 +441,8 @@ p1{
   
 <h2>  NEWS  </h2> 
  
-<marquee bgcolor="GoldenRod ">Momentan  avem o garsoniera  disponibila pentru inchiriere-tarif 950,00lei/luna. Ocazional, pot apare si alte  disponibilitati pentru inchiriere! Multumesc! tel: 0735018250</marquee> 
-<h2> Incepand cu luna APRILIE 2019 este <strong> DISPONIBILA </strong> o garsoniera pentru inchiriere. </p>
+<marquee bgcolor="GoldenRod ">Momentan  avem o garsoniera  disponibila pentru inchiriere-tarif 650,00lei/luna. Ocazional, pot apare si alte  disponibilitati pentru inchiriere! Multumesc! tel: 0735018250</marquee> 
+<h2> Incepand cu luna MAI 2019 dispunem de  <strong> DISPONIBILA </strong> o garsoniera pentru inchiriere. </p>
 <h2>Garsonierele sunt proprietate personala - persoana fizica </h2>
  </div>
 
