--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ p1{
 		<p> Atunci cand numarul de telefon se  afiseaza   o garsoniera este disponibila pentru inchiriere.  </p>
 <p> Observati  caseta NEWS </p> 
                 <p>mail: florin5231@gmail.com</p>
-<p>0735018250</p>
+<p>TEL .............250</p>
 		<a href="https://vrei-garsoniera.github.io/DISPONIBILA/" class="button">HOME</a>
 		<a href="https://vrei-garsoniera.github.io/ManualeDisponibila/" class="button">MANUALE</a>
                 <p> Accesul la  manuale   se poate face doar cu parola de pe Desktop sau Laptop.</p>
@@ -431,7 +431,7 @@ p1{
  <h1> CONTACT <h1>
 <p>  Pot fi contactat  la adresa de mail  : florin5231@gmail.com 
 </p>
-<h2> TELEFON:0735018250</h2>
+<h2> TELEFON:------------250</h2>
 <p> Telefonul este valabil doar atunci cand  avem o garsoniera disponibila pentru vizionare si inchiriere. </p>
 <p>Daca nu pot raspunde la telefon  va rog un sms si voi revenii cu un apel catre dumneavoastra intr-un timp cat mai scurt. </p>   
      </div>
@@ -441,8 +441,8 @@ p1{
   
 <h2>  NEWS  </h2> 
  
-<marquee bgcolor="GoldenRod ">Momentan  avem o garsoniera  disponibila pentru inchiriere-tarif 650,00lei/luna. Ocazional, pot apare si alte  disponibilitati pentru inchiriere! Multumesc! tel: 0735018250</marquee> 
-<h2> Incepand cu luna MAI 2019 dispunem de  <strong> DISPONIBILA </strong> o garsoniera pentru inchiriere. </p>
+<marquee bgcolor="GoldenRod ">Momentan  avem o garsoniera  disponibila pentru inchiriere-tarif ----,00lei/luna. Ocazional, pot apare si alte  disponibilitati pentru inchiriere! Multumesc! tel: 0735018250</marquee> 
+<h2> Incepand cu luna --- 2019 dispunem de  <strong> DISPONIBILA </strong> o garsoniera pentru inchiriere. </p>
 <h2>Garsonierele sunt proprietate personala - persoana fizica </h2>
  </div>
 
